<resources>
    <string name="app_name">Livro de Gastos</string>
    <string name="expense_history_title">Histórico de gastos</string>
    <string name="recommended_daily_expense_title">gasto diário recomendado</string>
    <string name="today_total_expense">gasto hoje:</string>
    <string name="today_total_remaining">restante hoje:</string>
    <string-array name="months">
        <item name="January">Janeiro</item>
        <item name="February">Fevereiro</item>
        <item name="March">Março</item>
        <item name="April">Abril</item>
        <item name="May">Maio</item>
        <item name="June">Junho</item>
        <item name="July">Julho</item>
        <item name="August">Agosto</item>
        <item name="September">Setembro</item>
        <item name="October">Outubro</item>
        <item name="November">Novembro</item>
        <item name="December">Dezembro</item>
    </string-array>
    <string name="monthly_management">Gerenciamento mensal</string>
    <string name="save">Salvar</string>
    <string name="BRL_symbol">R$</string>
</resources>