<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="16dp"
    android:background="@drawable/container"
    android:padding="16dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/DailyInfo">

    <TextView
        android:id="@+id/textViewRecommendedAmountTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recommended_daily_expense_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/textViewRecommendedAmountValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="R$ 36,25"
        app:layout_constraintLeft_toLeftOf="@id/textViewRecommendedAmountTitle"
        app:layout_constraintRight_toRightOf="@id/textViewRecommendedAmountTitle"
        app:layout_constraintTop_toBottomOf="@id/textViewRecommendedAmountTitle"/>
    <TextView
        android:id="@+id/textViewExpendedAmountTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/today_total_expense"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/textViewRemainingAmountTitle"
        app:layout_constraintTop_toBottomOf="@id/textViewRecommendedAmountValue"/>
    <TextView
        style="@style/DailyInfo.Expended.Value"
        android:id="@+id/textViewExpendedAmountValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="R$ 15,00"
        app:layout_constraintLeft_toLeftOf="@id/textViewExpendedAmountTitle"
        app:layout_constraintRight_toRightOf="@id/textViewExpendedAmountTitle"
        app:layout_constraintTop_toBottomOf="@id/textViewExpendedAmountTitle"/>
    <TextView
        android:id="@+id/textViewRemainingAmountTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/today_total_remaining"
        app:layout_constraintLeft_toRightOf="@id/textViewExpendedAmountTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewRecommendedAmountValue"/>
    <TextView
        style="@style/DailyInfo.Remaining.Value"
        android:id="@+id/textViewRemainingAmountValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="R$ 21,25"
        app:layout_constraintLeft_toLeftOf="@id/textViewRemainingAmountTitle"
        app:layout_constraintRight_toRightOf="@id/textViewRemainingAmountTitle"
        app:layout_constraintTop_toBottomOf="@id/textViewRemainingAmountTitle"/>

</androidx.constraintlayout.widget.ConstraintLayout>