<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.MonthlyExpenseDetails"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingHorizontal="19dp"
        android:paddingVertical="29dp"
        style="@style/Container">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewTitle"
            style="@style/EntryDetails.Date.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/monthly_management"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputInitialValue"
            style="@style/Widget.ExpenseBook.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:prefixText="@string/BRL_symbol"
            android:hint="Valor inicial">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                tools:text="0" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEconomyGoal"
            style="@style/Widget.ExpenseBook.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:prefixText="@string/BRL_symbol"
            android:hint="Meta econômica">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                tools:text="0" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonCancel"
                style="@style/Widget.ExpenseBook.Button.TertiaryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingVertical="16dp"
                android:minWidth="145dp"
                android:layout_weight="1"
                android:text="Cancelar"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonConfirm"
                style="@style/Widget.ExpenseBook.Button.PrimaryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingVertical="16dp"
                android:minWidth="145dp"
                android:layout_weight="1"
                android:text="@string/save"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>